@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -209,7 +209,7 @@ public class MultipleStringLiteralsCheck extends AbstractCheck {
         for (Map.Entry<String, List<DetailAST>> stringListEntry : stringMap.entrySet()) {
             final List<DetailAST> hits = stringListEntry.getValue();
             if (hits.size() > allowedDuplicates) {
-                final DetailAST firstFinding = hits.get(0);
+                final DetailAST firstFinding = hits.getFirst();
                 final String recurringString =
                     ALL_NEW_LINES.matcher(
                         stringListEntry.getKey()).replaceAll("\\\\n");
