@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -442,7 +442,7 @@ public class CustomImportOrderCheck extends AbstractCheck {
      *        first import group of file.
      */
     private String getFirstGroup() {
-        final ImportDetails firstImport = importToGroupList.get(0);
+        final ImportDetails firstImport = importToGroupList.getFirst();
         return getImportGroup(firstImport.staticImport(),
                 firstImport.importFullPath());
     }
@@ -793,7 +793,7 @@ public class CustomImportOrderCheck extends AbstractCheck {
          *
          * @return import start line from ast.
          */
-        public int getStartLineNumber() {
+        /* package */ int getStartLineNumber() {
             return importAST.getLineNo();
         }
 
@@ -807,7 +807,7 @@ public class CustomImportOrderCheck extends AbstractCheck {
          *
          * @return import end line from ast.
          */
-        public int getEndLineNumber() {
+        /* package */ int getEndLineNumber() {
             return importAST.getLastChild().getLineNo();
         }
     }
