@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -149,8 +149,8 @@ public final class TestInputConfiguration {
 
     private DefaultConfiguration createTreeWalker() {
         final DefaultConfiguration treeWalker;
-        if (childrenModules.get(0).getModuleName().equals(TreeWalker.class.getName())) {
-            treeWalker = childrenModules.get(0).createConfiguration();
+        if (childrenModules.getFirst().getModuleName().equals(TreeWalker.class.getName())) {
+            treeWalker = childrenModules.getFirst().createConfiguration();
         }
         else {
             treeWalker = new DefaultConfiguration(TreeWalker.class.getName());
