@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -97,7 +97,7 @@ public class RegexpHeaderCheckTest extends AbstractModuleTestSupport {
             .that(headerRegexps.size())
             .isEqualTo(1);
         assertWithMessage("Invalid header regexp")
-            .that(headerRegexps.get(0).pattern())
+            .that(headerRegexps.getFirst().pattern())
             .isEqualTo(header);
     }
 
