@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -67,7 +67,7 @@ public class CodeSelectorPresentationTest extends AbstractPathTestSupport {
     private static List<Integer> convertLinesToPosition(List<Integer> systemLinesToPosition) {
         final List<Integer> convertedLinesToPosition = new ArrayList<>();
         final int lineSeparationCorrection = System.lineSeparator().length() - 1;
-        convertedLinesToPosition.add(0, systemLinesToPosition.get(0));
+        convertedLinesToPosition.addFirst(systemLinesToPosition.getFirst());
         for (int i = 1; i < systemLinesToPosition.size(); i++) {
             convertedLinesToPosition.add(i,
                     systemLinesToPosition.get(i) - lineSeparationCorrection * (i - 1));
