@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -156,7 +156,7 @@ public class MainFrameTest extends AbstractGuiTestSupport {
                 })) {
             openFileButton.doClick();
 
-            final FileFilter fileFilter = mocked.constructed().get(0).getFileFilter();
+            final FileFilter fileFilter = mocked.constructed().getFirst().getFileFilter();
             assertWithMessage("The file should be accepted")
                     .that(fileFilter.accept(new File(TEST_FILE_NAME)))
                     .isTrue();
